--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "file-saver": "^2.0.5",
     "gh-pages": "^6.1.1",
     "jszip": "^3.10.1",
+    "openai": "^4.56.0",
     "pizzip": "^3.1.6",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
